crates/svm-sdk-tests/tests/endpoint/endpoint_and_ctor_fails.rs
use svm_sdk::app;

#[app]
mod App {
    #[ctor]
    #[endpoint]
    fn get() {}
}

fn main() {}
